[gd_scene load_steps=26 format=2]

[ext_resource path="res://Game_Files/Enemy/Zom.png" type="Texture" id=1]
[ext_resource path="res://Game_Files/Enemy/Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Game_Files/Enemy/Scripts/Patrol_State.gd" type="Script" id=3]
[ext_resource path="res://Game_Files/Enemy/Scripts/Chase_State.gd" type="Script" id=4]
[ext_resource path="res://Game_Files/Enemy/Scripts/Reset_State.gd" type="Script" id=5]
[ext_resource path="res://Game_Files/Enemy/Zom_Idle.png" type="Texture" id=6]
[ext_resource path="res://Game_Files/SFX/Walk.wav" type="AudioStream" id=7]
[ext_resource path="res://Game_Files/SFX/PlayerDetected.wav" type="AudioStream" id=8]
[ext_resource path="res://Game_Files/SFX/PlayerFree.wav" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 4.0
height = 4.0

[sub_resource type="OccluderPolygon2D" id=15]
polygon = PoolVector2Array( -6, 12, -4, 12, -4, 11, -6, 11 )

[sub_resource type="CapsuleShape2D" id=16]
radius = 4.308
height = 3.384

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 4
frames = SubResource( 13 )
animation = "Idle"
speed_scale = 0.9
playing = true

[node name="Walk_Sound" type="AudioStreamPlayer2D" parent="AnimatedSprite"]
stream = ExtResource( 7 )
volume_db = -20.0
autoplay = true
max_distance = 500.0
area_mask = 7

[node name="Screech" type="AudioStreamPlayer2D" parent="AnimatedSprite"]
stream = ExtResource( 8 )

[node name="DisappointedScreech" type="AudioStreamPlayer2D" parent="AnimatedSprite"]
stream = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.66855, 8.33371 )
rotation = 1.5708
shape = SubResource( 14 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
width = 2.0

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 70, 0 )
collision_mask = 3
collide_with_areas = true

[node name="State" type="Node" parent="."]

[node name="Patrol" type="Node" parent="State"]
script = ExtResource( 3 )

[node name="Chase" type="Node" parent="State"]
script = ExtResource( 4 )

[node name="Reset" type="Node" parent="State"]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 15 )

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
position = Vector2( 7, 0 )
occluder = SubResource( 15 )

[node name="Player Detector" type="Area2D" parent="."]
position = Vector2( 0, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Detector"]
shape = SubResource( 16 )

[connection signal="area_entered" from="Player Detector" to="." method="_on_Player_Detector_area_entered"]
